<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_local_hospital_red_150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:id="@+id/appNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="15dp"
        android:textSize="23dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:width="370dp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/enterNameEt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/appNameTv"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="19dp"
        android:hint="@string/enterName"
        />

    <EditText
        android:id="@+id/enterLastnameEt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/enterNameEt"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="19dp"
        android:hint="@string/enterLastname"
        />

    <EditText
        android:id="@+id/enterHospitalEt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/enterLastnameEt"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="19dp"
        android:hint="@string/enterHospital"
        />

    <EditText
        android:id="@+id/enterPinEt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@id/enterHospitalEt"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="19dp"
        android:hint="@string/enterPin"
        android:textAlignment="center"
        android:inputType="number"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/enterPinEt"
        android:layout_marginTop="35dp"
        android:textSize="19dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        />





</androidx.constraintlayout.widget.ConstraintLayout>