<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/newPatientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newpatientTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/newPatientImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/newPatientTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:paddingRight="15dp"
        android:src="@drawable/ic_person_add_red_60dp"
        />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPatientImg"
        android:layout_marginTop="80dp"
        android:hint="@string/namePh"
        />

    <EditText
        android:id="@+id/lastnameEt"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEt"
        android:layout_marginTop="30dp"
        android:hint="@string/lastnamePh"
        />

    <EditText
        android:id="@+id/conditionsEt"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastnameEt"
        android:layout_marginTop="30dp"
        android:hint="@string/conditionsPh"
        />

    <Button
        android:id="@+id/addPatientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conditionsEt"
        android:layout_marginTop="90dp"
        android:text="@string/newpatientBtn"
        android:textSize="19dp"
        android:textAllCaps="false"
    />
</androidx.constraintlayout.widget.ConstraintLayout>