<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/profileTitleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22dp"
        />

    <ImageView
        android:id="@+id/profilePictureEdit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/profileTitleEdit"
        android:layout_marginTop="50dp"
        android:cropToPadding="true"
        />

    <TextView
        android:id="@+id/profileNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profilePictureEdit"
        android:layout_marginTop="80dp"
        android:text="@string/profileName"
        />
    <EditText
        android:id="@+id/profileName2Edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileNameEdit"
        android:layout_marginTop="20dp"

        />


    <TextView
        android:id="@+id/profileLastnameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileName2Edit"
        android:layout_marginTop="30dp"
        android:text="@string/profileLastname"
        />
    <EditText
        android:id="@+id/profileLastname2Edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileLastnameEdit"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/profileHospitalEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileLastname2Edit"
        android:layout_marginTop="30dp"
        android:text="@string/profileHospital"
        />
    <EditText
        android:id="@+id/profileHospital2Edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileHospitalEdit"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnDiscardEdit"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileHospital2Edit"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="19dp"
        android:text="@string/discard"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnSaveEdit"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileHospital2Edit"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="19dp"
        android:text="@string/save"
        android:textAllCaps="false"
        />



</androidx.constraintlayout.widget.ConstraintLayout>