<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22dp"
        />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/profileTitle"
        android:layout_marginTop="50dp"
        android:cropToPadding="true"
        />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profilePicture"
        android:layout_marginTop="100dp"
        android:text="@string/profileName"
        />
    <TextView
        android:id="@+id/profileName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/profileLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileName2"
        android:layout_marginTop="30dp"
        android:text="@string/profileLastname"
        />
    <TextView
        android:id="@+id/profileLastname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileLastname"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />


    <TextView
        android:id="@+id/profileHospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileLastname2"
        android:layout_marginTop="30dp"
        android:text="@string/profileHospital"
        />
    <TextView
        android:id="@+id/profileHospital2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profileHospital"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnChangeProfile"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileHospital2"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="19dp"
        android:text="@string/profileChangeBtn"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileHospital2"
        android:layout_marginTop="80dp"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="19dp"
        android:text="@string/profilLogoutBtn"
        android:textAllCaps="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>