<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/editPatientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editPatientTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22dp"
        />

    <ImageView
        android:id="@+id/editPatientProfilePicture"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/editPatientTitle"
        android:layout_marginTop="50dp"
        android:cropToPadding="true"
        />


    <EditText
        android:id="@+id/editPatientName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientProfilePicture"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:id="@+id/editPatientLastname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientName"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/editPatientFirstCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientLastname"
        android:layout_marginTop="20dp"
        android:text="@string/editPatientFirstState"
        />
    <EditText
        android:id="@+id/editPatientFirstConditionEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientFirstCondition"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/editPatientCurrentCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientFirstConditionEdit"
        android:layout_marginTop="30dp"
        android:text="@string/editPatientCurrentState"
        />
    <EditText
        android:id="@+id/editPatientCurrentConditionEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientCurrentCondition"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/editPatientDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientCurrentConditionEdit"
        android:layout_marginTop="30dp"
        android:text="@string/editPatientDate"
        />

    <TextView
        android:id="@+id/editPatientDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/editPatientDate"
        android:layout_marginTop="10dp"

        />

    <Button
        android:id="@+id/patientEditBtnDiscard"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPatientDate2"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="17dp"
        android:text="@string/editPatientDiscard"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/patientEditBtnSave"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPatientDate2"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="19dp"
        android:text="@string/editPatientSave"
        android:textAllCaps="false"
        />



</androidx.constraintlayout.widget.ConstraintLayout>